// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown--Attachment 1`] = `
<picture
  onClick={[Function]}
>
  <img
    alt="Image"
    height="500"
    src="htttps://repl.it/"
  />
</picture>
`;

exports[`Markdown--BlockQoute 1`] = `
<blockquote>
  Test
</blockquote>
`;

exports[`Markdown--Bold 1`] = `
<strong>
  Bold
</strong>
`;

exports[`Markdown--Bold--And--Italic 1`] = `
<strong>
  <em>
    test
  </em>
</strong>
`;

exports[`Markdown--Channel 1`] = `
<span
  onClick={[Function]}
>
  #
  Main
</span>
`;

exports[`Markdown--Codeblock 1`] = `
<pre>
  <code
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"hljs-built_in\\">console</span>.log(<span class=\\"hljs-string\\">&#x27;Hello world&#x27;</span>);",
      }
    }
  />
</pre>
`;

exports[`Markdown--Header-1 1`] = `
<h1>
  h1
</h1>
`;

exports[`Markdown--Header-1-Type-2 1`] = `
<h1>
  h1
</h1>
`;

exports[`Markdown--Header-2 1`] = `
<h2>
  h2
</h2>
`;

exports[`Markdown--Header-2-Type-2 1`] = `
<h2>
  h2
</h2>
`;

exports[`Markdown--Header-3 1`] = `
<h3>
  h3
</h3>
`;

exports[`Markdown--Header-4 1`] = `null`;

exports[`Markdown--Header-5 1`] = `null`;

exports[`Markdown--Header-6 1`] = `null`;

exports[`Markdown--Horizontal--Rule 1`] = `
Array [
  <p>
    test
  </p>,
  <hr />,
]
`;

exports[`Markdown--InlineCode 1`] = `
<code>
  Inline
</code>
`;

exports[`Markdown--Italic 1`] = `
<em>
  console.log('Hello world');
</em>
`;

exports[`Markdown--Ordered--List 1`] = `
<ol>
  <li>
    test
  </li>
  <li>
    test
  </li>
</ol>
`;

exports[`Markdown--StrikeThrough 1`] = `
<p>
  ~~StrikeThrough
</p>
`;

exports[`Markdown--Underline 1`] = `
<ins>
  Underline
</ins>
`;

exports[`Markdown--Url 1`] = `
<a
  href="htttps://repl.it/"
>
  Repl
</a>
`;

exports[`Markdown--Url-2 1`] = `
<a
  href="htttps://repl.it/"
>
  htttps://repl.it/
</a>
`;

exports[`Markdown--unordered--List 1`] = `
<ul>
  <li>
    test
  </li>
  <li>
    test
  </li>
</ul>
`;

exports[`Markdown--unordered--List-2 1`] = `
<ul>
  <li>
    test
  </li>
  <li>
    test
  </li>
</ul>
`;

exports[`Markdown--unordered--List-3 1`] = `
<ul>
  <li>
    test
  </li>
  <li>
    test
  </li>
</ul>
`;
